creusot/tests/should_fail/prusti/traits/curr.stderr
error[creusot]: `'a` must match the current time slice
  --> curr.rs:13:5
   |
13 |     fn test<'curr, Y>(x: &'curr mut Y) -> &'curr mut Y {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

